@@ -9,7 +9,7 @@ label.0=Spool
 # Path to mailbox for UNIX-style mailboxes,
 # or pop3:user:password@mailserver[:port] for POP3 accounts
 # port are optional, default - 110
-path.0=/var/spool/mail/gb
+path.0=/var/mail/gb
 
 # Command, which executed on new mail arrival, or special keyword 'beep'
 #notify.0=beep
